# node-valhalla

./: .gitignore  CHANGELOG.md  CMakeLists.txt  package-lock.json  package.json
cmake/: CMakeSettings.json  FindNode.cmake
docker/: Dockerfile-build  Dockerfile-build-x86  Dockerfile-run  install-shared-deps.sh
lua/: graph.lua
scripts/: node_install.sh
src/bindings/node/: CMakeLists.txt  node.cc
src/mjolnir/: graphenhancer.cc
src/thor/: astar_bss.cc  bidirectional_astar.cc  dijkstras.cc  multimodal.cc  timedistancebssmatrix.cc  timedistancematrix.cc  unidirectional_astar.cc
test/: lua.cc
test/gurka/: test_accessible_barrier.cc
valhalla/sif/: dynamiccost.h
